# on-error-resume-next

./: CMakeLists.txt  README.md
samples/: .gitignore  CMakeLists.txt  sigsegv.c
src/: .gitignore  CMakeLists.txt  on-error.c
